--- a/src/views/admin/error400.ejs
+++ b/src/views/admin/error400.ejs
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Error 400</title>
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
-    <!-- styles -->
-    <link rel="stylesheet" href="/css/styles.css">
-  </head>
-  <body class="anti aliased border-top-wide border-primary d-flex flex-column">
-    <div class="flex-fill d-flex align-items-center justify-content-center">
-      <div class="container-tight">
-        <div class="empty">
-          <div class="empty-header">404</div>
-          <p class="empty-title">Se ha generado una página de error</p>
-          <% if(typeof alerts !== 'undefined') { %> 
-            <% alerts.map(function (alert){ %>
-              <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                <%- alert.msg %>
-              </div>
-            <% }) %>
-          <% } %>
-          <div class="empty-action">
-            <input
-              class="btn btn-primary"
-              action="action"
-              onclick="window.history.go(-1); return false;"
-              type="submit"
-              value="Volver"
-            />
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Error</title>
+  <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+  <!-- styles -->
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/boton.css">
+  <link rel="stylesheet" href="/css/input.css">
+  <link rel="stylesheet" href="/css/alert.css">
+</head>
+
+<body class="border-top-wide border-primary d-flex flex-column">
+  <div class="flex-fill d-flex align-items-center justify-content-center">
+    <div class="container-tight">
+      <div class="empty">
+        <div class="empty-img">
+          <svg xmlns="http://www.w3.org/2000/svg" class="text-warning" width="128" height="128" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 12l5 5l-1.5 1.5a3.536 3.536 0 1 1 -5 -5l1.5 -1.5z" /><path d="M17 12l-5 -5l1.5 -1.5a3.536 3.536 0 1 1 5 5l-1.5 1.5z" /><path d="M3 21l2.5 -2.5" /><path d="M18.5 5.5l2.5 -2.5" /><path d="M10 11l-2 2" /><path d="M13 14l-2 2" /></svg>
+        </div>
+        <p class="empty-title">Se ha generado una página de error</p>
+        <% if(typeof alerts !== 'undefined') { %>
+        <% alerts.map(function (alert){ %>
+        <div class="alert alert-info alert-dismissible fade show" role="alert">
+          <%- alert.msg %>
+        </div>
+        <% }) %>
+        <% } %>
+        <div class="empty-action">
+          <a id="back-link" class="btn btn-primary">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M5 12l14 0"></path><path d="M5 12l6 6"></path><path d="M5 12l6 -6"></path></svg>
+            Volver
+          </a>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+
+  <script>
+    const element = document.getElementById('back-link');
+    element.setAttribute('href', document.referrer)
+  </script>
+</body>
+
 </html>
