--- a/src/views/admin/tipos/edit.ejs
+++ b/src/views/admin/tipos/edit.ejs
@@ -50,20 +50,22 @@
                 <input type="hidden" name="idtipo" id="idtipo" value="<%- datos.tipo.IDTIPO %>">
                 <div class="card-body">
                   <div class="row">
-                    <div class="col-2">
-                      <div class="mb-1">
-                        <div class="input-control">
-                          <label class="form-label required">Código</label>
-                          <input type="text" name="codtip" id="codtip" class="form-control text-uppercase" value="<%- datos.tipo.CODTIP %>" readonly />
-                          <div class="invalid-feedback"></div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-10">
+                    <div class="col-12">
                       <div class="mb-1">
                         <div class="input-control">
                           <label class="form-label required">Descripción</label>
                           <input type="text" name="destip" id="destip" class="form-control text-uppercase" value="<%- datos.tipo.DESTIP %>" autofocus />
+                          <div class="invalid-feedback"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12">
+                      <div class="mb-1">
+                        <div class="input-control">
+                          <label class="form-label required">Ayuda</label>
+                          <input type="text" name="ayutip" id="ayutip" class="form-control" value="<%- datos.tipo.AYUTIP %>" />
                           <div class="invalid-feedback"></div>
                         </div>
                       </div>
@@ -81,8 +83,8 @@
           </div>
         </div>
       </div>
-      <%- include('../../partials/footer') %>
     </div>
+    <%- include('../../partials/footer') %>
   </div>
 
   <script src="/js/util.js"></script>
