--- a/src/views/admin/usuarios/index.ejs
+++ b/src/views/admin/usuarios/index.ejs
@@ -79,10 +79,10 @@
                   <table class="table table-vcenter table-striped sortable" id="tblUsuarios">
                     <thead>
                       <tr class="header">
-                        <th class="w-4"></th>
-                        <th>Nombre</th>
+                        <th class="w-5"></th>
+                        <th class="w-50">Nombre</th>
                         <th class="w-10">Oficina</th>
-                        <th class="w-7"></th>
+                        <th class="w-5"></th>
                       </tr>
                     </thead>
                     <tbody id="table-body">
@@ -95,8 +95,8 @@
           </div>
         </div>
       </div>
-      <%- include('../../partials/footer') %>
     </div>
+    <%- include('../../partials/footer') %>
   </div>
 
   <div class="modal modal-blur fade" id="modal-borrar" tabindex="-1" role="dialog" aria-hidden="true">
