--- a/src/views/user/formularios/resueltos/index.ejs
+++ b/src/views/user/formularios/resueltos/index.ejs
@@ -58,9 +58,6 @@
                       placeholder="Buscar..." aria-label="Buscar en formularios">
                   </div>
                 </form>
-                <a href="" id="asig" class="btn btn-primary">
-                  Asignados
-                </a>
               </div>
             </div>
           </div>
@@ -89,7 +86,14 @@
                     <tbody id="table-body">
                     </tbody>
                   </table>
-                  <div id="pagination-wrapper" class="nav py-1"></div>
+                  <div class="row text-center align-items-center flex-row-reverse">
+                    <div class="col-lg-auto ms-lg-auto">
+                      <div id="pagination-wrapper" class="nav py-1"></div>
+                    </div>
+                    <div class="col-12 col-lg-auto mt-3 mt-lg-0">
+                      <a href="#" id="asig" class="btn btn-white">Volver</a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
