--- a/src/views/admin/tipos/index.ejs
+++ b/src/views/admin/tipos/index.ejs
@@ -79,8 +79,9 @@
                   <table class="table table-vcenter table-striped sortable" id="tblTipos">
                     <thead>
                       <tr class="header">
-                        <th class="w-4"></th>
+                        <th class="w-5"></th>
                         <th>Descripción</th>
+                        <th class="w-20">Ayuda</th>
                         <th class="w-5"></th>
                       </tr>
                     </thead>
@@ -94,8 +95,8 @@
           </div>
         </div>
       </div>
-      <%- include('../../partials/footer') %>
     </div>
+    <%- include('../../partials/footer') %>
   </div>
 
   <div class="modal modal-blur fade" id="modal-borrar" tabindex="-1" role="dialog" aria-hidden="true">
